2004-03-14 Ben Maurer  <bmaurer@users.sourceforge.net>

	* monop.cs: show base type, interfaces.

2004-03-14 Ben Maurer  <bmaurer@users.sourceforge.net>

	* monop.cs: Make this work on MS (we have a bug).

2004-03-07 Ben Maurer  <bmaurer@users.sourceforge.net>

	* monop.cs: New tool, clone of javap. Allows you to get
	an outline view of a class.
